--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
         <div id="chatMessages" class="chat-messages">
             <div class="chat-message bot mb-2">
-                <div class="chat-bubble bot-bubble">Hi! I'm AI WeatherBot. I can give you suggestions based on the weather</div>
+                <div class="chat-bubble bot-bubble" id="random-sentence"> </div>
             </div>
         </div>
         <!-- Added: Typing indicator for AI response -->
