--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
 
     <!-- Floating Chat Button -->
-    <button id="openChatBtn" class="fixed bottom-12 right-15 bg-blue-600 text-white p-4 rounded-full shadow-lg hover:bg-blue-700 transition duration-300 z-50">
+    <button id="openChatBtn" class="fixed bottom-12 md:bottom-12 right-6 md:right-12 bg-blue-600 text-white p-4 rounded-full shadow-lg hover:bg-blue-700 transition duration-300 z-50">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-12" fill="none" viewBox="0 0 24 24" stroke="currentColor">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M9 16H5a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v8a2 2 0 01-2 2h-5l-5 5v-5z" />
         </svg>
